syntax = "proto3";

package customer.services.v1;

import "customer/models/v1/customer_profile.proto";
import "types/guid.proto";

option csharp_namespace = "DKH.CustomerService.Contracts.Services.V1";

// CustomerManagementService provides storefront-scoped customer profile operations.
// All methods require mandatory storefront_id - operations are restricted to the specified storefront.
service CustomerManagementService {
  // Get customer profile (storefront operation - scoped to specific storefront)
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);

  // Get or create customer profile (storefront operation - scoped to specific storefront)
  rpc GetOrCreateProfile(GetOrCreateProfileRequest) returns (GetOrCreateProfileResponse);

  // Update customer profile (storefront operation - scoped to specific storefront)
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);

  // Delete customer profile (storefront operation - soft delete scoped to specific storefront)
  rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse);
}

message GetProfileRequest {
  proto.platform.grpc.common.types.GuidValue storefront_id = 1;  // Required - identifies the storefront
  string telegram_user_id = 2;
}

message GetProfileResponse {
  customer.models.v1.CustomerProfile profile = 1;
  bool found = 2;
}

message GetOrCreateProfileRequest {
  proto.platform.grpc.common.types.GuidValue storefront_id = 1;  // Required - identifies the storefront
  string telegram_user_id = 2;
  string first_name = 3;
  string last_name = 4;
  string username = 5;
  string photo_url = 6;
  string language_code = 7;
}

message GetOrCreateProfileResponse {
  customer.models.v1.CustomerProfile profile = 1;
  bool created = 2;
}

message UpdateProfileRequest {
  proto.platform.grpc.common.types.GuidValue storefront_id = 1;  // Required - ensures update is scoped to specific storefront
  string telegram_user_id = 2;
  optional string first_name = 3;
  optional string last_name = 4;
  optional string phone = 5;
  optional string email = 6;
  optional string language_code = 7;
}

message UpdateProfileResponse {
  customer.models.v1.CustomerProfile profile = 1;
}

message DeleteProfileRequest {
  proto.platform.grpc.common.types.GuidValue storefront_id = 1;  // Required - ensures deletion is scoped to specific storefront
  string telegram_user_id = 2;
  bool hard_delete = 3;
}

message DeleteProfileResponse {
  bool success = 1;
}
